--- a/SpigotPlugins/src/main/resources/plugin.yml
+++ b/SpigotPlugins/src/main/resources/plugin.yml
@@ -1,4 +1,8 @@
-name: Ecnomy Ranks
+name: EconomyRanks
 version: ${project.version}
 main: indrocraft.spigot.ecnomyranks.Main
 api-version: 1.17
+commands:
+  Complaints:
+    usage: /<command>
+    description: allows peeps to complain
