--- a/SpigotPlugins/pom.xml
+++ b/SpigotPlugins/pom.xml
@@ -70,5 +70,10 @@
             <version>1.17-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+        </dependency>
     </dependencies>
 </project>
