--- a/SpigotPlugins/src/main/resources/plugin.yml
+++ b/SpigotPlugins/src/main/resources/plugin.yml
@@ -6,3 +6,6 @@ commands:
   Complaints:
     usage: /<command>
     description: allows peeps to complain
+  Warn:
+    usage: /<command>
+    description: warns a player
