Rank Working Need Data Base Implemation

--- a/SpigotPlugins/src/main/resources/plugin.yml
+++ b/SpigotPlugins/src/main/resources/plugin.yml
@@ -12,3 +12,11 @@ commands:
   SetRank:
     usage: /<command>
     description: Sets Players Rank
+  Dev:
+    usage: /<command>
+    description: Command Used For Devlopment and testing
+
+  Convert:
+    usage: /<command>
+    description: Use as a calculator to conver blocks into stacks and stacks into blocks \n Usage- /c type arg - arguments for type
+    alias: "c"
