--- a/SpigotPlugins/src/main/resources/plugin.yml
+++ b/SpigotPlugins/src/main/resources/plugin.yml
@@ -29,7 +29,9 @@ commands:
     usage: /<command>
     description: the money system
     aliases: "ah"
-  Serverinfo:
+  serverinfo:
     usage: /<command>
     description: gives info about the server
     aliases: "info"
+  home:
+    usage: /<command>
