--- a/SpigotPlugins/src/main/resources/plugin.yml
+++ b/SpigotPlugins/src/main/resources/plugin.yml
@@ -21,6 +21,7 @@ commands:
     usage: /<command>
     description: Use as a calculator to conver blocks into stacks and stacks into blocks \n Usage- /c type arg - arguments for type
     alias: "c"
+
   Economy:
     usage: /<command>
     description: the money system
@@ -35,6 +36,6 @@ commands:
     aliases: "info"
   home:
     usage: /<command>
-    aliases: [sethome]
+    aliases: [sethome, homes]
   openinv:
     usage: /<command>
