finished infrastructure for AuctionHouse and added verify command also improved ranks

--- a/SpigotPlugins/src/main/resources/plugin.yml
+++ b/SpigotPlugins/src/main/resources/plugin.yml
@@ -39,3 +39,6 @@ commands:
     aliases: [sethome, homelist, delhome]
   openinv:
     usage: /<command>
+  verify:
+    usage: /<command>
+    description: verifyies the user with their discord account
