--- a/SpigotPlugins/src/main/resources/config.yml
+++ b/SpigotPlugins/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 databseForTP: world
 
-complaintssavelocation: \complaints\
-WarnSaveLocation: \warn\
+ranks:
+
 
 database:
   host: localhost # host of your database
